:sparkles: fix: Models for the response added

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-form></app-form>
-  <app-table></app-table>
+  <app-form (toggle)="toggleTable($event)"></app-form>
+  <app-table [isOpen]="tableIsOpened" [data]="dataSet"></app-table>
 </div>
