--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,12 +1,13 @@
-<div *ngIf="loading">loading...</div>
+<ngx-spinner [fullScreen]="true"></ngx-spinner>
 
 <h4>Find music based on your city weather</h4>
 <form>
   <div class="form-group">
     <label for="city">Find your city:</label>
-    <input ngx-google-places-autocomplete name="city" placeholder="Enter the name of your city" type="text"
-      class="form-control" [options]='options' #placesRef="ngx-places"
-      (onAddressChange)="handleAddressChange($event)" />
+    <input ngx-google-places-autocomplete id="city" name="city" placeholder="Enter the name of your city" 
+      type="text" class="form-control" [options]='options' #placesRef="ngx-places"
+      (onAddressChange)="handleAddressChange($event)"
+      required minlength="2" />
   </div>
   <button type="button" class="btn btn-primary" (click)="findTracks()">Find music</button>
 </form>
