:fire: fix(search): table columns removed

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <app-form (toggle)="toggleTable($event)"></app-form>
-  <app-table [isOpen]="tableIsOpened" [data]="dataSet"></app-table>
+  <div class="row">
+    <app-form (toggle)="toggleTable($event)"></app-form>
+  </div>
+  <div class="row">
+    <app-table [isOpen]="tableIsOpened" [data]="dataSet"></app-table>
+  </div>
 </div>
