--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -3,19 +3,15 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">#</th>
         <th scope="col" sortable="name" (sort)="onSort($event)">Name</th>
-        <th scope="col" sortable="popularity" (sort)="onSort($event)">Popularity</th>
         <th scope="col" sortable="preview" (sort)="onSort($event)">Preview</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let track of data.tracks">
-        <td>{{track.track_number}}</td>
         <td><a href="{{track.external_urls.spotify}}" target='_blank'>{{track.name}}</a></td>
-        <td>{{track.popularity}}</td>
         <td>
-          <video *ngIf="track.preview_url" controls #audioOption>
+          <video *ngIf="track.preview_url" controls>
               <source src="{{track.preview_url}}" type="audio/mpeg">
           </video>
         </td>
